packages/signed-api/deployment/cloudformation-template.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "CloudFormation template for deploying Signed API",
  "Parameters": {
    "realTimeEndpointAuthToken": {
      "Type": "String",
      "MinLength": 5,
      "Description": "Auth token for accessing real time data."
    },
    "airnodeFeedAuthToken": {
      "Type": "String",
      "MinLength": 5,
      "Description": "Auth token for Airnode feed."
    },
    "grafanaLokiUser": {
      "Type": "String",
      "MinLength": 2,
      "Description": "Username for authenticating Loki API"
    },
    "grafanaLokiToken": {
      "Type": "String",
      "MinLength": 10,
      "Description": "Token for authenticating Loki API"
    },
    "grafanaLokiEndpoint": {
      "Type": "String",
      "MinLength": 10,
      "Description": "Loki endpoint"
    }
  },
  "Outputs": {
    "LoadBalancerDNS": {
      "Description": "The DNS name of the load balancer",
      "Value": { "Fn::GetAtt": ["ELB", "DNSName"] },
      "Export": {
        "Name": { "Fn::Sub": "${AWS::StackName}-LoadBalancerDNS" }
      }
    }
  },
  "Resources": {
    "SignedApiLogsGroup": {
      "Type": "AWS::Logs::LogGroup",
      "Properties": {
        "LogGroupName": "/ecs/signedApi-<ID>",
        "RetentionInDays": 7
      }
    },
    "SignedApiTaskDefinition": {
      "Type": "AWS::ECS::TaskDefinition",
      "Properties": {
        "Family": "signed-api-task",
        "Cpu": "1024",
        "Memory": "2048",
        "NetworkMode": "awsvpc",
        "RequiresCompatibilities": ["FARGATE"],
        "ExecutionRoleArn": { "Ref": "ECSTaskRole" },
        "ContainerDefinitions": [
          {
            "Essential": true,
            "Image": "grafana/fluent-bit-plugin-loki:2.9.1-amd64",
            "Name": "SignedApiLogForwarder",
            "FirelensConfiguration": {
              "Type": "fluentbit",
              "Options": {
                "enable-ecs-log-metadata": "true"
              }
            },
            "LogConfiguration": {
              "LogDriver": "awslogs",
              "Options": {
                "awslogs-group": {
                  "Ref": "SignedApiLogsGroup"
                },
                "awslogs-region": {
                  "Ref": "AWS::Region"
                },
                "awslogs-create-group": "true",
                "awslogs-stream-prefix": "firelens"
              }
            },
            "MemoryReservation": 50
          },
          {
            "Name": "signed-api-container",
            "Image": "<DOCKER_IMAGE>",
            "Environment": [
              {
                "Name": "SECRETS_ENV",
                "Value": {
                  "Fn::Join": [
                    "",
                    [
                      "REAL_TIME_ENDPOINT_AUTH_TOKEN",
                      "=",
                      {
                        "Ref": "realTimeEndpointAuthToken"
                      },
                      "\\n",
                      "AIRNODE_FEED_AUTH_TOKEN",
                      "=",
                      {
                        "Ref": "airnodeFeedAuthToken"
                      }
                    ]
                  ]
                }
              },
              {
                "Name": "CONFIG_SOURCE",
                "Value": "local"
              },
              {
                "Name": "LOG_LEVEL",
                "Value": "debug"
              }
            ],
            "EntryPoint": [
              "/bin/sh",
              "-c",
              "mkdir config && echo -e $SECRETS_ENV >> ./config/secrets.env && wget -O - <SIGNED_API_URL_CONFIGURATION> >> ./config/signed-api.json && node dist/src/index.js"
            ],
            "PortMappings": [
              {
                "ContainerPort": 80,
                "HostPort": 80
              }
            ],
            "LogConfiguration": {
              "LogDriver": "awsfirelens",
              "Options": {
                "Name": "grafana-loki",
                "Url": {
                  "Fn::Join": [
                    "",
                    [
                      "https://",
                      {
                        "Ref": "grafanaLokiUser"
                      },
                      ":",
                      {
                        "Ref": "grafanaLokiToken"
                      },
                      "@",
                      {
                        "Ref": "grafanaLokiEndpoint"
                      },
                      "/loki/api/v1/push"
                    ]
                  ]
                },
                "Labels": "{app=\"signed-api\",airnodeAddress=\"<AIRNODE_ADDRESS>\"}",
                "RemoveKeys": "container_id,container_name,ecs_task_definition,source,ecs_cluster",
                "LabelKeys": "ecs_task_arn",
                "LineFormat": "json"
              }
            }
          }
        ]
      }
    },
    "SignedApiService": {
      "Type": "AWS::ECS::Service",
      "DependsOn": "SignedApiListener",
      "Properties": {
        "Cluster": { "Ref": "ECSCluster" },
        "LaunchType": "FARGATE",
        "TaskDefinition": { "Ref": "SignedApiTaskDefinition" },
        "DesiredCount": 1,
        "NetworkConfiguration": {
          "AwsvpcConfiguration": {
            "Subnets": [{ "Ref": "PublicSubnet1" }, { "Ref": "PublicSubnet2" }],
            "SecurityGroups": [{ "Ref": "ECSSecurityGroup" }],
            "AssignPublicIp": "ENABLED"
          }
        },
        "LoadBalancers": [
          {
            "ContainerName": "signed-api-container",
            "ContainerPort": 80,
            "TargetGroupArn": { "Ref": "SignedApiTargetGroup" }
          }
        ]
      }
    },
    "ECSCluster": {
      "Type": "AWS::ECS::Cluster",
      "Properties": {
        "ClusterName": "signed-api-cluster-<ID>"
      }
    },
    "ELB": {
      "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
      "Properties": {
        "Name": "signed-api-elb-<ID>",
        "Subnets": [{ "Ref": "PublicSubnet1" }, { "Ref": "PublicSubnet2" }],
        "SecurityGroups": [{ "Ref": "ELBSecurityGroup" }],
        "Scheme": "internet-facing"
      }
    },
    "SignedApiListener": {
      "Type": "AWS::ElasticLoadBalancingV2::Listener",
      "Properties": {
        "DefaultActions": [
          {
            "Type": "forward",
            "TargetGroupArn": { "Ref": "SignedApiTargetGroup" }
          }
        ],
        "LoadBalancerArn": { "Ref": "ELB" },
        "Port": 80,
        "Protocol": "HTTP"
      }
    },
    "SignedApiTargetGroup": {
      "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
      "Properties": {
        "Port": 80,
        "Protocol": "HTTP",
        "VpcId": { "Ref": "VPC" },
        "TargetType": "ip"
      }
    },
    "VPC": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.0.0.0/16",
        "EnableDnsSupport": "true",
        "EnableDnsHostnames": "true"
      }
    },
    "PublicSubnet1": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": { "Ref": "VPC" },
        "CidrBlock": "10.0.1.0/24",
        "AvailabilityZone": { "Fn::Select": [0, { "Fn::GetAZs": "" }] },
        "MapPublicIpOnLaunch": "true"
      }
    },
    "PublicSubnet2": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": { "Ref": "VPC" },
        "CidrBlock": "10.0.2.0/24",
        "AvailabilityZone": { "Fn::Select": [1, { "Fn::GetAZs": "" }] },
        "MapPublicIpOnLaunch": "true"
      }
    },
    "InternetGateway": {
      "Type": "AWS::EC2::InternetGateway"
    },
    "GatewayAttachment": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": { "Ref": "VPC" },
        "InternetGatewayId": { "Ref": "InternetGateway" }
      }
    },
    "RouteTable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": { "Ref": "VPC" }
      }
    },
    "Route": {
      "Type": "AWS::EC2::Route",
      "DependsOn": "GatewayAttachment",
      "Properties": {
        "RouteTableId": { "Ref": "RouteTable" },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": { "Ref": "InternetGateway" }
      }
    },
    "Subnet1RouteTableAssociation": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": { "Ref": "PublicSubnet1" },
        "RouteTableId": { "Ref": "RouteTable" }
      }
    },
    "Subnet2RouteTableAssociation": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": { "Ref": "PublicSubnet2" },
        "RouteTableId": { "Ref": "RouteTable" }
      }
    },
    "ECSSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Security Group for ECS Tasks",
        "VpcId": { "Ref": "VPC" },
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "FromPort": 80,
            "ToPort": 80,
            "SourceSecurityGroupId": { "Ref": "ELBSecurityGroup" }
          }
        ]
      }
    },
    "ELBSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Security Group for ELB",
        "VpcId": { "Ref": "VPC" },
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "FromPort": 80,
            "ToPort": 80,
            "CidrIp": "0.0.0.0/0"
          }
        ]
      }
    },
    "ECSTaskRole": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Version": "2012-10-17",
          "Statement": [
            {
              "Effect": "Allow",
              "Principal": {
                "Service": ["ecs-tasks.amazonaws.com"]
              },
              "Action": ["sts:AssumeRole"]
            }
          ]
        },
        "Path": "/",
        "Policies": [
          {
            "PolicyName": "ecs-service",
            "PolicyDocument": {
              "Version": "2012-10-17",
              "Statement": [
                {
                  "Effect": "Allow",
                  "Action": [
                    "ec2:AuthorizeSecurityGroupIngress",
                    "ec2:Describe*",
                    "elasticloadbalancing:DeregisterInstancesFromLoadBalancer",
                    "elasticloadbalancing:DeregisterTargets",
                    "elasticloadbalancing:Describe*",
                    "elasticloadbalancing:RegisterInstancesWithLoadBalancer",
                    "elasticloadbalancing:RegisterTargets",
                    "ec2:CreateSecurityGroup",
                    "ec2:DeleteSecurityGroup",
                    "logs:CreateLogGroup",
                    "logs:CreateLogStream",
                    "logs:DescribeLogStreams",
                    "logs:PutLogEvents"
                  ],
                  "Resource": "*"
                }
              ]
            }
          }
        ]
      }
    }
  }
}
